# foldit-plugin-sdk

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen-abi.toml  cbindgen.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
include/: foldit_plugin_abi.h
proto/: plugin.proto
python/foldit_plugin_sdk/: __init__.py  backend_utils.py  cache_utils.py  checkpoint_utils.py  confidence_utils.py  device_utils.py  logging_config.py  multiprocessing_utils.py  path_utils.py  plugin_interface.py  quantization_utils.py  validation_utils.py  weights.py
python/foldit_plugin_sdk/proto/: __init__.py  plugin_pb2.py
scripts/: check_file_lengths.py
src/: abi.rs  decode.rs  error.rs  export.rs  lib.rs  plugin.rs  protocol.rs  python.rs
